# Ayaz

./: README.md
ayaz/: README.md  pyproject.toml
ayaz/src/ayaz/: __init__.py  crew.py  main.py
ayaz/src/ayaz/config/: agents.yaml  tasks.yaml
