[project]
name = "ayaz"
version = "0.1.0"
description = "Ayaz is an agentic system for workflow automation using CrewAI and Google Gemini"
authors = [{ name = "Umair Khan", email = "asadsher2324@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
    "langchain-google-genai>=0.0.5",
    "google-generativeai>=0.3.0"
]

[project.scripts]
ayaz = "ayaz.main:run"
run_crew = "ayaz.main:run"
train = "ayaz.main:train"
replay = "ayaz.main:replay"
test = "ayaz.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
